1、update NG45xx samples

--- a/docs/1-NeoEdge NG45XX Series/3-Software Guide/3-Software Frameworks and Tools/2-n8n.md
+++ b/docs/1-NeoEdge NG45XX Series/3-Software Guide/3-Software Frameworks and Tools/2-n8n.md
@@ -2,51 +2,51 @@
 
 ---
 
-This guide walks through how to install, configure, and use **n8n** on NVIDIA **Jetson Orin** devices. n8n is a powerful, extensible workflow automation tool with hundreds of built-in integrations. With Docker support and low system requirements, it runs smoothly on Jetson hardware.
+本指南将介绍如何在 NVIDIA **Jetson Orin** 设备上安装、配置和使用 **n8n**。n8n 是一个强大的可扩展工作流自动化工具，支持数百种内置集成。由于支持 Docker 且系统资源需求低，在 Jetson 硬件上运行非常流畅。
 
 ---
 
-## 1. Overview
+## 1. 概览
 
-- Visual low-code workflow builder  
-- Supports 300+ integrations (APIs, webhooks, databases, etc.)  
-- Docker-compatible for fast deployment  
-- Local-first automation (privacy-friendly)  
-- Fully supports ARM64 (Jetson)  
+- 可视化低代码工作流构建器  
+- 支持 300+ 集成（API、Webhook、数据库等）  
+- 兼容 Docker，部署快速  
+- 本地优先自动化（注重隐私）  
+- 完全支持 ARM64 架构（Jetson）
 
-This document covers:
+本指南内容包括：
 
-- Docker-based installation  
-- Persistent configuration  
-- Service management  
-- Remote access setup  
-- Uninstallation & troubleshooting  
+- 基于 Docker 的安装  
+- 持久化配置  
+- 服务管理  
+- 远程访问配置  
+- 卸载与故障排查
 
 ![overview](/img/NG45XX_n8n_overview.png)
 
 ---
 
-## 2. System Requirements
+## 2. 系统要求
 
-### Hardware
+### 硬件要求
 
-| Component | Minimum Requirements        |
-| --------- | --------------------------- |
-| Device    | Jetson Orin Nano / NX / AGX |
-| RAM       | ≥ 4GB (8GB recommended)     |
-| Storage   | ≥ 2GB free space            |
+| 组件   | 最低要求                        |
+| ---- | --------------------------- |
+| 设备   | Jetson Orin Nano / NX / AGX |
+| 内存   | ≥ 4GB（推荐 8GB）               |
+| 存储空间 | ≥ 2GB 可用空间                  |
 
-### Software
+### 软件要求
 
-- Ubuntu 20.04 or 22.04 (JetPack-based)
-- Docker & Docker Compose
-- Node.js (optional for source-based use)
+- Ubuntu 20.04 或 22.04（基于 JetPack）
+- Docker & Docker Compose  
+- Node.js（可选，用于源码运行）
 
 ---
 
-## 3. Installing n8n
+## 3. 安装 n8n
 
-### Method A: Docker CLI (Quick Start)
+### 方法 A：Docker CLI 快速启动
 
 ```bash
 docker run -it --rm \
@@ -56,17 +56,17 @@ docker run -it --rm \
   n8nio/n8n
 ```
 
-> ✅ Official image supports ARM64, works out of the box on Jetson.
+> ✅ 官方镜像支持 ARM64，Jetson 可直接运行。
 
-### Method B: Docker Compose (Recommended)
+### 方法 B：推荐使用 Docker Compose
 
-1. Create a folder for your n8n setup:
+1. 创建 n8n 安装目录：
 
 ```bash
 mkdir -p ~/n8n && cd ~/n8n
 ```
 
-2. Create a `docker-compose.yml`:
+2. 创建 `docker-compose.yml` 文件：
 
 ```yaml
 version: "3"
@@ -81,57 +81,57 @@ services:
     restart: always
 ```
 
-3. Start n8n:
+3. 启动 n8n：
 
 ```bash
 docker compose up -d
 ```
 
-【image】*Fig: Docker Compose starting n8n container*
+【图片】*图示：Docker Compose 启动 n8n 容器*
 
 ---
 
-## 4. Accessing the Interface
+## 4. 访问界面
 
-Once running, access the WebUI via browser:
+n8n 运行后，通过浏览器访问：
 
 ```
 http://<Jetson-IP>:5678
 ```
 
-### Optional: Add Basic Authentication
+### 可选：启用基本身份验证（登录保护）
 
-You can set login credentials via environment variables:
+可通过环境变量设置登录用户名密码：
 
 ```bash
 -e N8N_BASIC_AUTH_USER=admin \
 -e N8N_BASIC_AUTH_PASSWORD=securepass
 ```
 
-For Compose, add to `environment:` section or `.env` file.
+在 Compose 中，将其添加到 `environment:` 段或使用 `.env` 文件。
 
-【image】*Fig: n8n login screen with Basic Auth enabled*
-
----
-
-## 5. Common Commands
-
-| Action       | Command                  |
-| ------------ | ------------------------ |
-| Start n8n    | `docker compose up -d`   |
-| View logs    | `docker logs n8n`        |
-| Stop service | `docker compose down`    |
-| Restart      | `docker compose restart` |
-| Update n8n   | `docker pull n8nio/n8n`  |
+【图片】*图示：n8n 启用 Basic Auth 的登录界面*
 
 ---
 
-## 6. Optional: Enable Remote Access
+## 5. 常用命令
 
-To access n8n remotely (e.g., from another machine):
+| 操作     | 命令                       |
+| ------ | ------------------------ |
+| 启动 n8n | `docker compose up -d`   |
+| 查看日志   | `docker logs n8n`        |
+| 停止服务   | `docker compose down`    |
+| 重启服务   | `docker compose restart` |
+| 更新 n8n | `docker pull n8nio/n8n`  |
 
-1. Ensure Jetson's firewall allows TCP port `5678`.
-2. Modify Compose file or container with:
+---
+
+## 6. 可选：启用远程访问
+
+若需远程访问 n8n（如从其他设备）：
+
+1. 确保 Jetson 防火墙允许 TCP 端口 `5678`。  
+2. 在 Compose 文件或容器中设置如下变量：
 
 ```env
 N8N_HOST=0.0.0.0
@@ -139,15 +139,15 @@ N8N_PORT=5678
 WEBHOOK_TUNNEL_URL=https://yourdomain.com
 ```
 
-3. For HTTPS, consider setting up a reverse proxy (e.g., Nginx + Let's Encrypt).
+3. 若需 HTTPS，建议配置反向代理（如 Nginx + Let's Encrypt）
 
-【image】*Fig: n8n deployed with domain + HTTPS*
+【图片】*图示：通过域名 + HTTPS 部署的 n8n 页面*
 
 ---
 
-## 7. Updating n8n
+## 7. 更新 n8n
 
-To upgrade to the latest version:
+更新到最新版：
 
 ```bash
 docker pull n8nio/n8n
@@ -155,25 +155,25 @@ docker compose down
 docker compose up -d
 ```
 
-> 💡 Data is preserved in `./n8n_data`.
+> 💡 数据会保存在 `./n8n_data` 中，不会丢失。
 
 ---
 
-## 8. Uninstalling n8n
+## 8. 卸载 n8n
 
-### Stop and remove the container:
+### 停止并删除容器：
 
 ```bash
 docker compose down
 ```
 
-### Delete local data:
+### 删除本地数据：
 
 ```bash
 rm -rf ~/n8n
 ```
 
-### Remove the Docker image (optional):
+### 移除 Docker 镜像（可选）：
 
 ```bash
 docker rmi n8nio/n8n
@@ -181,30 +181,30 @@ docker rmi n8nio/n8n
 
 ---
 
-## 9. Troubleshooting
+## 9. 故障排查
 
-| Issue               | Solution                              |
-| ------------------- | ------------------------------------- |
-| WebUI not reachable | Check if port 5678 is open on Jetson  |
-| Workflows not saved | Ensure `~/.n8n` or volume is writable |
-| Container crashes   | Use `docker logs n8n` to diagnose     |
-| Need HTTPS access   | Set up Nginx reverse proxy with SSL   |
+| 问题          | 解决方案                        |
+| ----------- | --------------------------- |
+| 无法访问 WebUI  | 检查 Jetson 是否开放 5678 端口      |
+| 工作流未保存      | 确保 `~/.n8n` 或挂载卷可写          |
+| 容器崩溃        | 使用 `docker logs n8n` 查看详细日志 |
+| 需要 HTTPS 访问 | 配置 Nginx 反向代理 + SSL         |
 
 ---
 
-## 10. Appendix
+## 10. 附录
 
-### Default File Paths
+### 默认文件路径
 
-| Purpose               | Path                      |
-| --------------------- | ------------------------- |
-| n8n config & data     | `~/.n8n` or `./n8n_data/` |
-| Docker project folder | `~/n8n`                   |
-| WebUI access          | `http://<Jetson-IP>:5678` |
+| 用途          | 路径                        |
+| ----------- | ------------------------- |
+| n8n 配置和数据   | `~/.n8n` 或 `./n8n_data/`  |
+| Docker 项目目录 | `~/n8n`                   |
+| WebUI 访问地址  | `http://<Jetson-IP>:5678` |
 
-### Resources
+### 参考资源
 
-- [n8n Documentation](https://docs.n8n.io)
-- [Docker Hub - n8n](https://hub.docker.com/r/n8nio/n8n)
-- [GitHub - n8n](https://github.com/n8n-io/n8n)
-- [Jetson Developer Forum](https://forums.developer.nvidia.com)
+- [n8n 官方文档](https://docs.n8n.io)  
+- [Docker Hub - n8n](https://hub.docker.com/r/n8nio/n8n)  
+- [GitHub - n8n](https://github.com/n8n-io/n8n)  
+- [Jetson 开发者论坛](https://forums.developer.nvidia.com)
