--- a/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG45XX Series/3-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG45XX Series/3-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
@@ -1,66 +1,63 @@
 # ALC5640
 
-本文档主要介绍Audio的开发适配流程，以ALC5640为例。Realtek ALC5640是一款低功耗、高性能的音频编解码器，广泛应用于各种嵌入式系统中。本指南旨在帮助用户在Jetson Orin Nano平台上成功适配和使用ALC5640音频编解码器。
+This document primarily introduces the development and adaptation process for audio, using the ALC5640 as an example. The Realtek ALC5640 is a low-power, high-performance audio codec widely used in various embedded systems. This guide aims to help users successfully adapt and use the ALC5640 audio codec on the Jetson Orin Nano platform.
 
-## Audio架构概要
+## Audio Architecture Overview
 
-### 常见名词
+### Common Terms
 
-| Module | Component                                                                 |
-| ------ | ------------------------------------------------------------------------- |
-| I2S    | I2S 接口，用于数字音频数据的传输，用于连接外部音频设备。                                            |
-| DSPK   | 数字扬声器接口，用于连接和控制数字扬声器，支持数字扬声器。                                             |
-| DMIC   | 数字麦克风控制器，用于管理和处理数字麦克风输入，支持数字麦克风。                                          |
-| Mixer  | 混音器，用于将多个音频信号混合成一个输出信号。                                                   |
-| AMX    | 音频多路复用器，用于将多个音频信号复用到一个输出通道。                                               |
-| ADX    | 音频解复用器，用于将一个音频信号分离成多个通道。                                                  |
-| SFC    | 采样频率转换器，用于将音频信号转换到不同的采样频率。                                                |
-| MVC    | 主音量控制器，用于调节音频信号的主音量。                                                      |
-| ADMA   | 音频直接内存访问，用于高效传输音频数据，支持 32 通道。                                             |
-| ADMAIF | AHUB DMA 接口，用于音频硬件单元与内存之间的数据传输，支持 20 个 TX/RX 通道，专为 Jetson 设计，支持多通道音频数据传输。 |
-| XBAR   | 交叉开关（音频路由），用于在多个音频信号源和目标之间动态路由音频数据，是音频数据路由的核心模块，支持动态音频路径配置。               |
-| APE    | NVIDIA Jetson 设备中的独立硬件模块，专门用于音频处理，具有低功耗和高性能的特点。                           |
-| AHUB   | APE 的核心组件，负责音频数据的路由和处理，包含多个 NVIDIA 独有的硬件模块。                               |
+| Module | Component                                                                                                                                                                                        |
+| ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| I2S    | I2S interface for transmitting digital audio data, used to connect external audio devices                                                                                                        |
+| DSPK   | Digital speaker interface for connecting and controlling digital speakers                                                                                                                        |
+| DMIC   | Digital microphone controller for managing and processing digital microphone input                                                                                                               |
+| Mixer  | Mixer for combining multiple audio signals into one output signal                                                                                                                                |
+| AMX    | Audio multiplexer for multiplexing multiple audio signals into one output channel                                                                                                                |
+| ADX    | Audio demultiplexer for separating one audio signal into multiple channels                                                                                                                       |
+| SFC    | Sample rate converter for converting audio signals to different sample rates                                                                                                                     |
+| MVC    | Master volume controller for adjusting the master volume of audio signals                                                                                                                        |
+| ADMA   | Audio direct memory access for efficient audio data transmission, supporting 32 channels                                                                                                         |
+| ADMAIF | AHUB DMA interface for data transfer between audio hardware units and memory, supporting 20 TX/RX channels, designed for Jetson, supporting multi-channel audio data transfer                    |
+| XBAR   | Crossbar (audio routing) for dynamically routing audio data between multiple audio sources and destinations, the core module for audio data routing, supporting dynamic audio path configuration |
+| APE    | Independent hardware module in NVIDIA Jetson devices dedicated to audio processing, featuring low power consumption and high performance                                                         |
+| AHUB   | Core component of APE responsible for audio data routing and processing, containing multiple NVIDIA-specific hardware modules                                                                    |
 
 ### Audio SW 架构
 
-       在 NVIDIA Jetson 平台上，ALC5640 音频编解码器（Codec）的驱动适配主要基于 **ALSA ASoC（Audio System on Chip）** 框架。ASoC 是 Linux 内核的标准音频子系统，用于管理嵌入式音频硬件，包括 Codec、平台 DMA 和数字音频接口（DAI）。
+On the NVIDIA Jetson platform, the driver adaptation for the ALC5640 audio codec is primarily based on the **ALSA ASoC (Audio System on Chip)** framework. ASoC is the standard audio subsystem of the Linux kernel for managing embedded audio hardware, including codecs, platform DMA, and digital audio interfaces (DAI).
+The ASoC driver architecture mainly consists of three core components:
 
-    ASoC 驱动架构主要包含三个核心组件：
+1. **Codec Driver** - Manages the ALC5640 register configuration and audio paths.
+2. **Platform Driver** - Handles Tegra DMA and I2S interfaces. 
+3. **Machine Driver** - Binds hardware and defines audio routing.
 
-1. **Codec驱动** - 管理ALC5640寄存器配置和音频路径
+There are some NVIDIA-specific features, such as:
 
-2. **平台驱动** - 处理Tegra DMA和I2S接口
+1. **Audio Processing Engine (APE)**, a dedicated hardware module for independent audio tasks. 
 
-3. **机器驱动** - 绑定硬件并定义音频路由
-
-其中存在一些NVIDIA独有特性，如
-
-1. **音频处理引擎(APE)**，专用硬件模块，独立处理音频任务
-
-2. **音频集线器(AHUB)**，包含了下述两个核心组件
+2. **Audio Hub (AHUB)**, which includes the following two core components: 
    
-   - **XBAR**：动态音频路由核心，支持实时路径切换，相当于开关作用
+   **XBAR**: The core of dynamic audio routing, supporting real-time path switching, equivalent to a switch.
    
-   - **ADMAIF**：专用32通道DMA引擎
+   **ADMAIF**: A dedicated 32-channel DMA engine.
 
 ![](/img/NG45XX_SOFTWARE/Driver/EG45XX_Audio_Framework.png)
 
-## ALC5640驱动适配过程
+## ALC5640 Driver Adaptation Process
 
-### 前置条件
+### Prerequisites
 
-- 确认Codec ALC5640芯片 i2c地址
+- Confirm the I2C address of the ALC5640 codec chip.
 
-- 根据数据手册获取ALC5640模式（主/从模式）、时钟（如MCLK/BCLK/LRCK）
+- Obtain the ALC5640 mode (master/slave mode) and clock information (e.g., MCLK/BCLK/LRCK) from the datasheet.
 
 ![](/img/NG45XX_SOFTWARE/Driver/EG45XX_ALC5640_CLK.png)
 
-### 设备树配置
+### Device Tree Configuration
 
-在设备树中`Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/nv-platform/tegra234-NG45XX-p3768-0000+p3767-0000-common.dts`完成下述配置
+In the device tree file `Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/nv-platform/tegra234-NG45XX-p3768-0000+p3767-0000-common.dts`, complete the following configurations:
 
-- i2c节点配置，添加codec芯片配置，参考如下：
+- I2C node configuration: Add codec chip configuration as shown below:
   
   ```c
   i2c@3160000 {
@@ -92,7 +89,7 @@
   };
   ```
 
-- I2S节点配置，使能ahub，i2s控制器，并且连接 `r&t5640_ep codec`芯片，参考如下：
+- I2S node configuration: Enable ahub, I2S controller, and connect to the `rt5640_ep codec` chip as shown below:
   
   ```shell
   aconnect@2900000 {
@@ -114,7 +111,7 @@
   };
   ```
 
-- 声卡节点定义&路由配置，配置如下：
+- Sound card node definition and routing configuration as shown below:
   
   ```shell
   sound {
@@ -145,7 +142,7 @@
   };
   ```
 
-- DAI链路配置，链接CPU ADMA中转xbar连接到codec alc5640。
+- DAI link configuration, linking the CPU ADMA intermediate xbar to the codec alc5640.
   
   ```shell
   nvidia-audio-card,dai-link@79 {
@@ -158,17 +155,17 @@
   };
   ```
 
-### 内核配置
+### Kernel Configuration
 
-在`Linux_for_Tegra/source/kernel/kernel-jammy-src/arch/arm64/configs/defconfig`中，添加下述配置
+In `Linux_for_Tegra/source/kernel/kernel-jammy-src/arch/arm64/configs/defconfig`, add the following configuration:
 
 ```shell
 CONFIG_SND_SOC_ALC5640=m
 ```
 
-### 系统适配
+### System Adaptation
 
-- 启动设备，将编译生成的dtb和snd-soc-rt5640.ko拷贝通过scp拷贝到AIBOX上。
+- Start the device and copy the compiled dtb and snd-soc-rt5640.ko to the AIBOX using scp.
 
 ```
 cd Linux_for_Tegra/source
@@ -177,7 +174,7 @@ scp ./kernel-devicetree/generic-dts/dtbs/tegra234-NG45XX-p3768-0000+p3767-0003-n
 scp ./kernel/kernel-jammy-src/sound/soc/codecs/snd-soc-rt5640.ko milesight@192.168.60.3:/home/milesight
 ```
 
-- 拷贝snd-soc-rt5640.ko到modules目录下，并执行depmod加载驱动
+- Copy snd-soc-rt5640.ko to the modules directory and execute depmod to load the driver.
 
 ```
 sudo cp ./snd-soc-rt5640.ko /lib/modules/5.15.148-tegra/kernel/sound/soc/codecs/snd-soc-rt5640.ko
@@ -185,11 +182,11 @@ sudo cp ./snd-soc-rt5640.ko /lib/modules/5.15.148-tegra/kernel/sound/soc/codecs/
 sudo depmod
 ```
 
-- 完成后，重启开发板即可。
+- After completion, restart the development board.
 
-### 测试验证
+### Testing and Verification
 
-- 耳机扬声器
+- Headphone Speaker
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -205,11 +202,11 @@ amixer -c APE cset name="CVB-RT HP R Playback Switch"  "on"
 amixer -c APE cset name="CVB-RT HP Playback Volume"  "31,31"
 amixer -c APE cset name="CVB-RT DAC1 Playback Volume"  "175,175" 
 
-#测试
+# Test
 aplay  xx.wav
 ```
 
-- 耳机麦克风
+- Headphone Microphone
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -221,12 +218,12 @@ amixer -c APE cset name="CVB-RT Stereo ADC MIXL ADC1 Switch" "on"
 amixer -c APE cset name="CVB-RT Stereo ADC MIXR ADC1 Switch" "on"
 amixer -c APE cset name='CVB-RT ADC Capture Switch' on
 
-#测试，录音播放
+# Test, record and play
 arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 xxx.wav
 aplay  xxx.wav
 ```
 
-- 外置扬声器
+- External Speaker
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -248,11 +245,11 @@ amixer -c APE cset name="CVB-RT SPOR MIX SPKVOL R Switch" on
 amixer -c APE cset name="CVB-RT OUT MIXL SPK MIXL Switch" on
 amixer -c APE cset name="CVB-RT OUT MIXR SPK MIXR Switch" on
 
-#测试
+# Test
 aplay  aaa.wav
 ```
 
-- 外置麦克风
+- External Microphone
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -265,27 +262,25 @@ amixer -c APE cset name="CVB-RT RECMIXL BST3 Switch" "on"
 amixer -c APE cset name="CVB-RT RECMIXR BST3 Switch" "on"
 amixer -c APE cset name='CVB-RT ADC Capture Switch' on
 
-#测试，录音播放
+# Test, record and play
 arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 aaa.wav
 aplay  aaa.wav
 ```
 
-## 故障排查
+## Troubleshooting
 
-- 无声音输出
+- No sound output
   
-  - 确认MCLK/BCLK正常
+  - Confirm MCLK/BCLK are normal.
   
-  - 确认I2S
+  - Confirm I2S.
   
-  - 检查amixer路由配置
+  - Check amixer routing configuration.
 
-- 录音噪声大
+- High noise in recording
   
-  - 检查采样率
+  - Check the sample rate.
 
-## 参考
+## References
 
 [Audio Setup and Development — NVIDIA Jetson Linux Developer Guide](https://docs.nvidia.com/jetson/archives/r36.4.3/DeveloperGuide/SD/Communications/AudioSetupAndDevelopment.html#)
-
-数据手册
