1、add nx45xx application iamge

--- a/docs/1-NeoEdge NG45XX Series/3-Software Guide/3-Software Frameworks and Tools/2-n8n.md
+++ b/docs/1-NeoEdge NG45XX Series/3-Software Guide/3-Software Frameworks and Tools/2-n8n.md
@@ -46,49 +46,36 @@
 
 ## 3. 安装 n8n
 
-### 方法 A：Docker CLI 快速启动
+### 方法 A：使用 [npx](https://docs.n8n.io/hosting/installation/npm/) (requires [Node.js](https://nodejs.org/en/download)):
+
+```bsh
+# Download and install fnm:
+curl -o- https://fnm.vercel.app/install | bash
+
+# Download and install Node.js:
+fnm install 22
+
+# Verify the Node.js version:
+node -v # Should print "v22.14.0".
+
+# Verify npm version:
+npm -v # Should print "10.9.2".
+```
 
 ```bash
-docker run -it --rm \
-  --name n8n \
-  -p 5678:5678 \
-  -v ~/.n8n:/home/node/.n8n \
-  n8nio/n8n
+mkdir -p ~/.n8n
+sudo chown -R $USER:$USER ~/.n8n
+npx n8n
 ```
 
 > ✅ 官方镜像支持 ARM64，Jetson 可直接运行。
 
-### 方法 B：推荐使用 Docker Compose
-
-1. 创建 n8n 安装目录：
+### 方法 B：使用 [Docker](https://docs.n8n.io/hosting/installation/docker/) :
 
 ```bash
-mkdir -p ~/n8n && cd ~/n8n
+docker volume create n8n_data
+docker run -it --rm --name n8n -p 5678:5678 -e N8N_SECURE_COOKIE=false -v n8n_data:/home/node/.n8n docker.n8n.io/n8nio/n8n
 ```
-
-2. 创建 `docker-compose.yml` 文件：
-
-```yaml
-version: "3"
-
-services:
-  n8n:
-    image: n8nio/n8n
-    ports:
-      - "5678:5678"
-    volumes:
-      - ./n8n_data:/home/node/.n8n
-    restart: always
-```
-
-3. 启动 n8n：
-
-```bash
-docker compose up -d
-```
-
-【图片】*图示：Docker Compose 启动 n8n 容器*
-
 ---
 
 ## 4. 访问界面
@@ -98,21 +85,7 @@ n8n 运行后，通过浏览器访问：
 ```
 http://<Jetson-IP>:5678
 ```
-
-### 可选：启用基本身份验证（登录保护）
-
-可通过环境变量设置登录用户名密码：
-
-```bash
--e N8N_BASIC_AUTH_USER=admin \
--e N8N_BASIC_AUTH_PASSWORD=securepass
-```
-
-在 Compose 中，将其添加到 `environment:` 段或使用 `.env` 文件。
-
-【图片】*图示：n8n 启用 Basic Auth 的登录界面*
-
----
+![login](/img/n8n_login.png)
 
 ## 5. 常用命令
 
@@ -141,47 +114,9 @@ WEBHOOK_TUNNEL_URL=https://yourdomain.com
 
 3. 若需 HTTPS，建议配置反向代理（如 Nginx + Let's Encrypt）
 
-【图片】*图示：通过域名 + HTTPS 部署的 n8n 页面*
-
 ---
 
-## 7. 更新 n8n
-
-更新到最新版：
-
-```bash
-docker pull n8nio/n8n
-docker compose down
-docker compose up -d
-```
-
-> 💡 数据会保存在 `./n8n_data` 中，不会丢失。
-
----
-
-## 8. 卸载 n8n
-
-### 停止并删除容器：
-
-```bash
-docker compose down
-```
-
-### 删除本地数据：
-
-```bash
-rm -rf ~/n8n
-```
-
-### 移除 Docker 镜像（可选）：
-
-```bash
-docker rmi n8nio/n8n
-```
-
----
-
-## 9. 故障排查
+## 7. 故障排查
 
 | 问题          | 解决方案                        |
 | ----------- | --------------------------- |
@@ -192,7 +127,7 @@ docker rmi n8nio/n8n
 
 ---
 
-## 10. 附录
+## 8. 附录
 
 ### 默认文件路径
 
