--- a/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG45XX Series/3-Software Guide/3-Software Frameworks and Tools/2-n8n.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG45XX Series/3-Software Guide/3-Software Frameworks and Tools/2-n8n.md
@@ -1,210 +1,147 @@
-# n8n
+# n8n  
 
----
+---  
 
-This guide walks through how to install, configure, and use **n8n** on NVIDIA **Jetson Orin** devices. n8n is a powerful, extensible workflow automation tool with hundreds of built-in integrations. With Docker support and low system requirements, it runs smoothly on Jetson hardware.
+This guide explains how to install, configure, and use **n8n** on NVIDIA **Jetson Orin** devices. n8n is a powerful and extensible workflow automation tool with hundreds of built-in integrations. Thanks to its Docker support and low system requirements, it runs smoothly on Jetson hardware.  
 
----
+---  
 
-## 1. Overview
+## 1. Overview  
 
 - Visual low-code workflow builder  
 - Supports 300+ integrations (APIs, webhooks, databases, etc.)  
-- Docker-compatible for fast deployment  
-- Local-first automation (privacy-friendly)  
-- Fully supports ARM64 (Jetson)  
+- Docker-compatible for quick deployment  
+- Local-first automation (privacy-focused)  
+- Full ARM64 architecture support (Jetson)  
 
-This document covers:
+This guide covers:  
 
 - Docker-based installation  
 - Persistent configuration  
 - Service management  
-- Remote access setup  
-- Uninstallation & troubleshooting  
+- Remote access configuration  
+- Uninstallation and troubleshooting  
 
-![overview](/img/NG45XX_n8n_overview.png)
+![overview](/img/NG45XX_n8n_overview.png)  
 
----
+---  
 
-## 2. System Requirements
+## 2. System Requirements  
 
-### Hardware
+### Hardware Requirements  
 
-| Component | Minimum Requirements        |
-| --------- | --------------------------- |
-| Device    | Jetson Orin Nano / NX / AGX |
-| RAM       | ≥ 4GB (8GB recommended)     |
-| Storage   | ≥ 2GB free space            |
+| Component | Minimum Requirement               |  
+| --------- | --------------------------------- |  
+| Device    | Jetson Orin Nano / NX / AGX       |  
+| RAM       | ≥ 4GB (8GB recommended)           |  
+| Storage   | ≥ 2GB free space                  |  
 
-### Software
+### Software Requirements  
 
-- Ubuntu 20.04 or 22.04 (JetPack-based)
-- Docker & Docker Compose
-- Node.js (optional for source-based use)
+- Ubuntu 20.04 or 22.04 (JetPack-based)  
+- Docker & Docker Compose  
+- Node.js (optional, for running from source)  
 
----
+---  
 
-## 3. Installing n8n
+## 3. Installing n8n  
 
-### Method A: Docker CLI (Quick Start)
+### Method A: Using [npx](https://docs.n8n.io/hosting/installation/npm/) (requires [Node.js](https://nodejs.org/en/download)):  
 
-```bash
-docker run -it --rm \
-  --name n8n \
-  -p 5678:5678 \
-  -v ~/.n8n:/home/node/.n8n \
-  n8nio/n8n
-```
+```bash  
+# Download and install fnm:  
+curl -o- https://fnm.vercel.app/install | bash  
 
-> ✅ Official image supports ARM64, works out of the box on Jetson.
+# Download and install Node.js:  
+fnm install 22  
 
-### Method B: Docker Compose (Recommended)
+# Verify the Node.js version:  
+node -v # Should print "v22.14.0".  
 
-1. Create a folder for your n8n setup:
+# Verify npm version:  
+npm -v # Should print "10.9.2".  
+```  
 
-```bash
-mkdir -p ~/n8n && cd ~/n8n
-```
+```bash  
+mkdir -p ~/.n8n  
+sudo chown -R $USER:$USER ~/.n8n  
+npx n8n  
+```  
 
-2. Create a `docker-compose.yml`:
+> ✅ The official image supports ARM64 and runs directly on Jetson.  
 
-```yaml
-version: "3"
+### Method B: Using [Docker](https://docs.n8n.io/hosting/installation/docker/):  
 
-services:
-  n8n:
-    image: n8nio/n8n
-    ports:
-      - "5678:5678"
-    volumes:
-      - ./n8n_data:/home/node/.n8n
-    restart: always
-```
+```bash  
+docker volume create n8n_data  
+docker run -it --rm --name n8n -p 5678:5678 -e N8N_SECURE_COOKIE=false -v n8n_data:/home/node/.n8n docker.n8n.io/n8nio/n8n  
+```  
 
-3. Start n8n:
+---  
 
-```bash
-docker compose up -d
-```
+## 4. Accessing the Interface  
 
-【image】*Fig: Docker Compose starting n8n container*
+Once n8n is running, access it via a browser at:  
 
----
+```  
+http://<Jetson-IP>:5678  
+```  
 
-## 4. Accessing the Interface
+![login](/img/n8n_login.png)  
 
-Once running, access the WebUI via browser:
+## 5. Common Commands  
 
-```
-http://<Jetson-IP>:5678
-```
+| Action          | Command                      |  
+| --------------- | ---------------------------- |  
+| Start n8n       | `docker compose up -d`       |  
+| View logs       | `docker logs n8n`            |  
+| Stop service    | `docker compose down`        |  
+| Restart service | `docker compose restart`     |  
+| Update n8n      | `docker pull n8nio/n8n`      |  
 
-### Optional: Add Basic Authentication
+---  
 
-You can set login credentials via environment variables:
+## 6. Optional: Enable Remote Access  
 
-```bash
--e N8N_BASIC_AUTH_USER=admin \
--e N8N_BASIC_AUTH_PASSWORD=securepass
-```
+To access n8n remotely (e.g., from another device):  
 
-For Compose, add to `environment:` section or `.env` file.
+1. Ensure the Jetson firewall allows TCP port `5678`.  
+2. Set the following variables in the Compose file or container:  
 
-【image】*Fig: n8n login screen with Basic Auth enabled*
+```env  
+N8N_HOST=0.0.0.0  
+N8N_PORT=5678  
+WEBHOOK_TUNNEL_URL=https://yourdomain.com  
+```  
 
----
+3. For HTTPS, configure a reverse proxy (e.g., Nginx + Let's Encrypt).  
 
-## 5. Common Commands
+---  
 
-| Action       | Command                  |
-| ------------ | ------------------------ |
-| Start n8n    | `docker compose up -d`   |
-| View logs    | `docker logs n8n`        |
-| Stop service | `docker compose down`    |
-| Restart      | `docker compose restart` |
-| Update n8n   | `docker pull n8nio/n8n`  |
+## 7. Troubleshooting  
 
----
+| Issue                | Solution                           |  
+| -------------------- | ---------------------------------- |  
+| Cannot access WebUI  | Check if port 5678 is open on Jetson |  
+| Workflows not saved  | Ensure `~/.n8n` or mounted volume is writable |  
+| Container crashes    | Use `docker logs n8n` for details  |  
+| HTTPS access needed  | Configure Nginx reverse proxy + SSL |  
 
-## 6. Optional: Enable Remote Access
+---  
 
-To access n8n remotely (e.g., from another machine):
+## 8. Appendix  
 
-1. Ensure Jetson's firewall allows TCP port `5678`.
-2. Modify Compose file or container with:
+### Default File Paths  
 
-```env
-N8N_HOST=0.0.0.0
-N8N_PORT=5678
-WEBHOOK_TUNNEL_URL=https://yourdomain.com
-```
+| Purpose           | Path                        |  
+| ----------------- | --------------------------- |  
+| n8n config & data | `~/.n8n` or `./n8n_data/`   |  
+| Docker project dir | `~/n8n`                     |  
+| WebUI access URL  | `http://<Jetson-IP>:5678`   |  
 
-3. For HTTPS, consider setting up a reverse proxy (e.g., Nginx + Let's Encrypt).
+### References  
 
-【image】*Fig: n8n deployed with domain + HTTPS*
-
----
-
-## 7. Updating n8n
-
-To upgrade to the latest version:
-
-```bash
-docker pull n8nio/n8n
-docker compose down
-docker compose up -d
-```
-
-> 💡 Data is preserved in `./n8n_data`.
-
----
-
-## 8. Uninstalling n8n
-
-### Stop and remove the container:
-
-```bash
-docker compose down
-```
-
-### Delete local data:
-
-```bash
-rm -rf ~/n8n
-```
-
-### Remove the Docker image (optional):
-
-```bash
-docker rmi n8nio/n8n
-```
-
----
-
-## 9. Troubleshooting
-
-| Issue               | Solution                              |
-| ------------------- | ------------------------------------- |
-| WebUI not reachable | Check if port 5678 is open on Jetson  |
-| Workflows not saved | Ensure `~/.n8n` or volume is writable |
-| Container crashes   | Use `docker logs n8n` to diagnose     |
-| Need HTTPS access   | Set up Nginx reverse proxy with SSL   |
-
----
-
-## 10. Appendix
-
-### Default File Paths
-
-| Purpose               | Path                      |
-| --------------------- | ------------------------- |
-| n8n config & data     | `~/.n8n` or `./n8n_data/` |
-| Docker project folder | `~/n8n`                   |
-| WebUI access          | `http://<Jetson-IP>:5678` |
-
-### Resources
-
-- [n8n Documentation](https://docs.n8n.io)
-- [Docker Hub - n8n](https://hub.docker.com/r/n8nio/n8n)
-- [GitHub - n8n](https://github.com/n8n-io/n8n)
+- [n8n Official Docs](https://docs.n8n.io)  
+- [Docker Hub - n8n](https://hub.docker.com/r/n8nio/n8n)  
+- [GitHub - n8n](https://github.com/n8n-io/n8n)  
 - [Jetson Developer Forum](https://forums.developer.nvidia.com)
