update NG45XX images and content

--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
@@ -206,7 +206,7 @@ amixer -c APE cset name="CVB-RT HP Playback Volume"  "31,31"
 amixer -c APE cset name="CVB-RT DAC1 Playback Volume"  "175,175" 
 
 #测试
-aplay  xx.wav
+aplay  xxx.wav
 ```
 
 - 耳机麦克风
@@ -249,7 +249,7 @@ amixer -c APE cset name="CVB-RT OUT MIXL SPK MIXL Switch" on
 amixer -c APE cset name="CVB-RT OUT MIXR SPK MIXR Switch" on
 
 #测试
-aplay  aaa.wav
+aplay  xxx.wav
 ```
 
 - 外置麦克风
@@ -266,8 +266,8 @@ amixer -c APE cset name="CVB-RT RECMIXR BST3 Switch" "on"
 amixer -c APE cset name='CVB-RT ADC Capture Switch' on
 
 #测试，录音播放
-arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 aaa.wav
-aplay  aaa.wav
+arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 xxx.wav
+aplay  xxx.wav
 ```
 
 ## 故障排查
