Update NG4500 content

--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
@@ -1,10 +1,8 @@
-# OV5647
+# 摄像头（以 OV5647 为例）
 
-本文档主要介绍camera的开发适配流程，以ov5647为例。
+本节以 OV5647 摄像头模组为例，说明在 NG4520 平台的开发适配流程，涵盖硬件前置、设备树、驱动编译、系统加载和调试等完整步骤。
 
-## Camera架构概要
-
-### 常见名词
+## Camera 架构与名词解释
 
 | 名词                  | 解释                             |
 | ------------------- | ------------------------------ |
@@ -20,33 +18,36 @@
 | UVC                 | USB视频类，用于USB摄像头的驱动程序。          |
 | VI                  | 视频输入模块，用于接收和处理视频数据。            |
 
-### Camera SW 架构
+**Camera 软件架构说明**
 
-    在Nvidia平台提供了两个Camera驱动架构，分别是 **Camera Core Library Interface** 和 **Direct V4L2 Interface** 。二者主要区别在于前者提供对Jetson平台上ISP的访问和高级图像处理功能，以及导出相关接口给应用空间的libargus使用。libargus是Jeptpack提供了简化的API来访问Jetson平台的相机功能和ISP，如后续使用的nvgstcapture-1.0工具也是基于该库。
+NVIDIA 平台支持两种 Camera 驱动架构：
 
-    由于后续需要使用Nvdia相关的ISP功能，因此将开发适配Camera Core Library Interface框架。
+- **Camera Core Library Interface**：支持 ISP 访问和高级图像处理，应用层通过 libargus API 访问（如 `nvgstcapture-1.0` 工具）。
+- **Direct V4L2 Interface**：直接使用 V4L2 驱动，不支持 NVIDIA ISP。
 
-## OV5647驱动适配过程
+**建议开发时采用 Camera Core Library Interface，以便充分利用 NVIDIA ISP 能力。**
+
+## OV5647 驱动适配流程
 
 ### 前置条件
 
-- 获取Camera i2c地址，确认线序，pown\reset引脚
+- 获取摄像头 I2C 地址及线序，确认 PWDN/RESET 引脚
 
-- 获取Camera上电时序，时钟，支持分辨率，帧率，摄像头滤色器阵列（BGGR、GBRG、GRBG、RGGB）
+- 获取上电时序、外部时钟、支持分辨率/帧率、滤色器阵列类型（BGGR/GBRG/GRBG/RGGB）
 
-- 确认摄像头连接接口，对应相应的tegra_sinterface，如Jetson orin nx的cam1对应serial_a，cam0对应serial_c
+- 确认连接接口及 tegra_sinterface 对应关系（如 NG452X 平台 cam0=serial_c）
 
-**本次开发适配是基于Jetson Orin NX平台，硬件连接接口为cam0。**
+> **本例基于 Jetson Orin NX，硬件连接接口为 cam0。****
 
 ### 设备树配置
 
-- OV5647的DTB采用overlay的方式进行加载，因此在内核源码中创建DTS文件，路径如下：
+- 创建设备树 Overlay 文件,路径示例如下:
   
   ```shell
   Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/overlay/tegra234-p3767-camera-p3768-ov5647.dts`
   ```
 
-- 创建`tegra-camera-platform`设备树节点
+- tegra-camera-platform 节点配置,配置视频流端口及连接关系，示例：
   
   ```nand2tetris-hdl
   tegra-capture-vi  {
@@ -66,7 +67,9 @@
   };
   ```
 
-- 在i2c节点下创建`rbpcv2_ov5647_c@36` 设备，并且根据datasheet填写i2c设备地址、mode的时钟、分辨率和帧率等信息
+- I2C 设备节点配置
+
+  配置摄像头参数（I2C 地址、模式、时钟、分辨率等）：
   
   ```nand2tetris-hdl
   rbpcv2_ov5647_c@36 {
@@ -147,11 +150,9 @@
   };
   ```
 
-- 端口绑定配置，确保视频流的连接关系。
+- 端口绑定配置
   
-  - 从ov5647摄像头设备生成视频数据流，然后传输给CSI 模块，进行接收、解码、解串和初步处理视频数据等操作，接着传输给VI 模块做进一步处理和格式化视频数据，并将其传输到系统内存或其他处理单元。
-  
-  - 通过`remote-endpoint`连接三个模块。
+  - 通过 `remote-endpoint` 连接摄像头、CSI 和 VI 模块，确保视频流通路完整。
     
     ```nand2tetris-hdl
     tegra-capture-vi  {
@@ -200,85 +201,74 @@
     };
     ```
 
-- 配置Makefile，`/home/xuys8233/work/Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/overlay/Makefile` ，添加如下信息：
+- Overlay Makefile 配置,在 `overlay/Makefile` 添加：
   
   ```
   dtbo-y += tegra234-p3767-camera-p3768-ov5647.dtbo
   ```
 
-- 编译生成dtbo
+- 编译生成 dtbo：
   
   ```
   make dtbs
   ```
 
-### 驱动配置
+### 驱动开发与编译
 
-- 添加驱动文件`/home/xuys8233/work/Linux_for_Tegra/source/nvidia-oot/drivers/media/i2c/ov5647.c`。 该驱动文件可以基于 `nv_ov5693.c` 进行修改。核心主要有以下几点：
+- 添加驱动源码**
+  
+  - 路径示例：`drivers/media/i2c/ov5647.c`
+  - 推荐基于 `nv_ov5693.c` 修改。
+  - 主要实现：
+    - `tegracam_device_register` 注册驱动
+    - 填充以下结构体：
+      - `tc_dev->sensor_ops`（上电、下电、读写寄存器、模式设置、流控制等）
+      - `tc_dev->v4l2sd_internal_ops`（如 open/s_stream）
+      - `tc_dev->tcctrl_ops`（增益、曝光、帧率控制等）
+  
+  ```
+  static struct tegracam_sensor_ops ov5647_sensor_ops = {
+      .power_on = ov5647_power_on,
+      .power_off = ov5647_power_off,
+      .write_reg = ov5647_write_reg,
+      .read_reg = ov5647_read_reg,
+      .set_mode = ov5647_set_mode,
+      .start_streaming = ov5647_start_streaming,
+      .stop_streaming = ov5647_stop_streaming,
+      .sensor_init = ov5647_sensor_init,
+  };
+  ```
 
-- 通过 NVIDIA 提供的 `tegracam_device_register` 函数注册相机驱动，需要填充以下三个结构体：
-  
-  - tc_dev->sensor_ops，该结构体包含了与传感器相关的操作函数，例如上电、下电、读写寄存器、设置模式、开始和停止流等操作    。这些函数在使用 NVIDIA 的 libargus API 时会被调用。以下是该结构体的示例：
-    
-    ```c
-    static struct tegracam_sensor_ops ov5647_sensor_ops = {
-        .power_on = ov5647_power_on,
-        .power_off = ov5647_power_off,
-        .write_reg = ov5647_write_reg,
-        .read_reg = ov5647_read_reg,
-        .set_mode = ov5647_set_mode,
-        .start_streaming = ov5647_start_streaming,
-        .stop_streaming = ov5647_stop_streaming,
-        .sensor_init = ov5647_sensor_init,
-    };
-    ```
-    
-    这些函数的具体实现需要根据 OV5647 的数据手册和相关文档进行编写。
-  
-  - tc_dev->v4l2sd_internal_ops，该结构体主要实现了 `open` 函数。如果需要在用户空间使用 `v4l2-ctl` 相关工具，需要添加`.s_stream = ov5647_s_stream` 相关的功能函数。示例如下：
+  这些函数的具体实现需要根据 OV5647 的数据手册和相关文档进行编写。
+
+  - 添加寄存器表头文件
+
+    - 路径示例：`drivers/media/i2c/ov5647_modes_tbls.h`
+    - 包含各分辨率、曝光等寄存器配置表，需与设备树 mode 顺序保持一致。
     
     ```c
     static struct v4l2_subdev_internal_ops ov5647_subdev_internal_ops = {
         .open = ov5647_open,
     };
     ```
-  
-  - tc_dev->tcctrl_ops，该结构体包含了相机控制操作函数，例如设置增益、曝光、帧率等。参考示例如下：
-    
-    ```c
-    static struct tegracam_ctrl_ops ov5647_ctrl_ops = {
-        .numctrls = ARRAY_SIZE(ctrl_cid_list),
-        .ctrl_cid_list = ctrl_cid_list,
-        .set_gain = ov5647_set_gain,
-        .set_exposure = ov5647_set_exposure,
-        .set_frame_rate = ov5647_set_frame_rate,
-        .set_group_hold = ov5647_set_group_hold,
-    };
-    ```
 
-- 添加头文件`/home/xuys8233/work/Linux_for_Tegra/source/nvidia-oot/drivers/media/i2c/ov5647_modes_tbls.h`。主要包含了sensor的分辨率、曝光时间等信息的寄存器表。参考示例如下：
+- 驱动 Makefile 配置，在 `drivers/media/i2c/Makefile` 添加：
   
-  - 该表会会被tc_dev->sensor_ops结构体注册。
-  
-  - 接着就是配置每个分辨率所调用的寄存器表，如start_stream。后续set_mode、set_gain等函数会调用该表的寄存器配置，进行写入。（**注：每一个分辨率的顺序需要和设备树中的mode顺序保持一致**）
-  
-  - 
-
-- 配置Makefile，修改`/home/xuys8233/work/Linux_for_Tegra/source/nvidia-oot/drivers/media/i2c/Makefile`
-  
-  ```shell
+  ```
   obj-m += ov5647.o
   ```
 
-- 编译模块，生成ov5647.ko    
+- 编译生成内核模块：
   
   ```shell
   make modules
   ```
 
-### 系统适配
+### 系统适配与加载
 
-- 启动设备，将编译好的dtbo和ov5647.ko拷贝通过scp拷贝到AIBOX上。
+**拷贝文件**
+
+- 将编译生成的 `.dtbo` 和 `ov5647.ko` 拷贝到目标设备（如 NG4520）：
 
 ```
 cd Linux_for_Tegra/source
@@ -286,6 +276,8 @@ cd Linux_for_Tegra/source
 scp ./kernel-devicetree/generic-dts/dtbs/tegra234-p3767-camera-p3768-ov5647.dtbo milesight@192.168.60.3:/home/milesight
 scp ./kernel-devicetree/generic-dts/dtbs/tegra234-p3767-camera-p3768-ov5647.dtbo milesight@192.168.60.3:/home/milesight
 ```
+
+**驱动安装**
 
 - 拷贝ov5647.ko到modules目录下，并执行depmod加载驱动
 
@@ -295,36 +287,46 @@ sudo cp ./ov5647.ko  /usr/lib/modules/5.15.148-tegra/updates/drivers/media/i2c/
 depmod
 ```
 
-- 拷贝dtbo到/boot目录下，通过config-by-hardware.py启动dtbo，如下图
+- 拷贝 `.dtbo` 到 `/boot`，通过 `config-by-hardware.py` 工具加载。
 
 - 完成后，重启开发板即可。
 
-## 调试思路
+## 调试与验证流程
 
-- 确认dtbo是否加载成功
-  
-  - 执行 `cat /boot/extlinux/extlinux.conf`确认是否加载了dtbo
-  
-  - 执行`cat /proc/device-tree/tegra-camera-platform/modules/module1/drivernode0/sysfs-device-tree`，确认dtbo是否生效。（extlinux.conf配置上了dtbo，但是不一定有使用上，可能存在dtbo存在错误导致无法生效，该错误不会显示出来，因此要确认该步骤）
+1. **设备树加载验证**
 
-- 确认驱动是否加载成功
-  
-  - 执行`lsmod | grep ov5647`，确认是否有ov5647驱动
-  
-  - 执行`sudo dmesg | grep ov5647`，确认驱动加载过程中是否存在报错
-  
-  - 通过`sudo i2cdetect -y -r 9` ,确认设备是否匹配成功
+   - 检查 `extlinux.conf` 是否加载了 `.dtbo`：
 
-- 确认加载没问题后，运行`nvgstcapture-1.0`去调用sensor
-  
-  - 确认列出来的分辨率是否和设备树的mode是否是否匹配
-  
-  - 确认有误其他报错信息，如出现下述nvbuf_utils，需确认是否dmesg是否有报错信息
+     `cat /boot/extlinux/extlinux.conf`
 
-- 通过`sudo media-ctl -p -d /dev/media0` 确认是否视频流链路是否存在问题
+   - 检查设备树节点是否生效：
+
+     `cat /proc/device-tree/tegra-camera-platform/modules/module1/drivernode0/sysfs-device-tree`
+
+2. **驱动加载验证**
+
+   - 检查驱动模块：
+
+     `lsmod | grep ov5647 sudo dmesg | grep ov5647`
+
+   - 检查 I2C 设备匹配：
+
+     `sudo i2cdetect -y -r 9`
+
+3. **摄像头功能测试**
+
+   - 运行 `nvgstcapture-1.0`，检查分辨率与模式匹配、无报错。
+
+   - 检查视频流链路：
+
+     `sudo media-ctl -p -d /dev/media0`
 
 ## 参考
 
 [Sensor Software Driver Programming](https://docs.nvidia.com/jetson/archives/r36.3/DeveloperGuide/SD/CameraDevelopment/SensorSoftwareDriverProgramming.html)
 
 [ov5647_driver/ov5647.c at main · mkm684/ov5647_driver](https://github.com/mkm684/ov5647_driver/blob/main/ov5647.c)
+
+---
+
+如需适配其它型号摄像头，建议参考原厂数据手册及 NVIDIA 官方开发文档，步骤基本一致。
