--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
@@ -1,10 +1,8 @@
-# ALC5640
+# 音频（以 ALC5640 为例）
 
-本文档主要介绍Audio的开发适配流程，以ALC5640为例。Realtek ALC5640是一款低功耗、高性能的音频编解码器，广泛应用于各种嵌入式系统中。本指南旨在帮助用户在Jetson Orin Nano平台上成功适配和使用ALC5640音频编解码器。
+本文档以 Realtek ALC5640 为例，说明其在NG4520 平台上的驱动适配、设备树配置、内核配置、系统加载及常用测试方法。
 
-## Audio架构概要
-
-### 常见名词
+## Audio 架构与名词解释
 
 | Module | Component                                                                 |
 | ------ | ------------------------------------------------------------------------- |
@@ -22,31 +20,18 @@
 | APE    | NVIDIA Jetson 设备中的独立硬件模块，专门用于音频处理，具有低功耗和高性能的特点。                           |
 | AHUB   | APE 的核心组件，负责音频数据的路由和处理，包含多个 NVIDIA 独有的硬件模块。                               |
 
-### Audio SW 架构
+ **Audio 软件架构说明**
 
-       在 NVIDIA Jetson 平台上，ALC5640 音频编解码器（Codec）的驱动适配主要基于 **ALSA ASoC（Audio System on Chip）** 框架。ASoC 是 Linux 内核的标准音频子系统，用于管理嵌入式音频硬件，包括 Codec、平台 DMA 和数字音频接口（DAI）。
-
-    ASoC 驱动架构主要包含三个核心组件：
-
-1. **Codec驱动** - 管理ALC5640寄存器配置和音频路径
-
-2. **平台驱动** - 处理Tegra DMA和I2S接口
-
-3. **机器驱动** - 绑定硬件并定义音频路由
-
-其中存在一些NVIDIA独有特性，如
-
-1. **音频处理引擎(APE)**，专用硬件模块，独立处理音频任务
-
-2. **音频集线器(AHUB)**，包含了下述两个核心组件
-   
-   - **XBAR**：动态音频路由核心，支持实时路径切换，相当于开关作用
-   
-   - **ADMAIF**：专用32通道DMA引擎
+- **ALSA ASoC**（Audio System on Chip）为主线 Linux 音频子系统，管理嵌入式音频硬件。
+- ASoC 架构包含三大核心组件：
+  1. **Codec 驱动**：管理 ALC5640 寄存器及音频路径
+  2. **平台驱动**：处理 Tegra DMA、I2S 接口
+  3. **机器驱动**：绑定硬件、定义音频路由
+- NVIDIA 独有特性：APE、AHUB（含 XBAR 动态路由和 ADMAIF 多通道 DMA）
 
 ![](/img/NG45XX_SOFTWARE/Driver/EG45XX_Audio_Framework.png)
 
-## ALC5640驱动适配过程
+## ALC5640 驱动适配流程
 
 ### 前置条件
 
@@ -60,7 +45,7 @@
 
 在设备树中`Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/nv-platform/tegra234-NG45XX-p3768-0000+p3767-0000-common.dts`完成下述配置
 
-- i2c节点配置，添加codec芯片配置，参考如下：
+- **i2c节点配置**，添加codec芯片配置，参考如下：
   
   ```c
   i2c@3160000 {
@@ -92,7 +77,7 @@
   };
   ```
 
-- I2S节点配置，使能ahub，i2s控制器，并且连接 `r&t5640_ep codec`芯片，参考如下：
+- **I2S节点配置**，使能ahub，i2s控制器，并且连接 `r&t5640_ep codec`芯片，参考如下：
   
   ```shell
   aconnect@2900000 {
@@ -114,7 +99,7 @@
   };
   ```
 
-- 声卡节点定义&路由配置，配置如下：
+- **声卡节点定义&路由配置**，配置如下：
   
   ```shell
   sound {
@@ -166,7 +151,7 @@
 CONFIG_SND_SOC_ALC5640=m
 ```
 
-### 系统适配
+### 系统适配与加载
 
 - 启动设备，将编译生成的dtb和snd-soc-rt5640.ko拷贝通过scp拷贝到AIBOX上。
 
@@ -189,7 +174,7 @@ sudo depmod
 
 ### 测试验证
 
-- 耳机扬声器
+- **耳机扬声器播放**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -209,7 +194,7 @@ amixer -c APE cset name="CVB-RT DAC1 Playback Volume"  "175,175"
 aplay  xxx.wav
 ```
 
-- 耳机麦克风
+- **耳机麦克风录音**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -226,7 +211,7 @@ arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 xxx.wav
 aplay  xxx.wav
 ```
 
-- 外置扬声器
+- **外置扬声器播放**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -252,7 +237,7 @@ amixer -c APE cset name="CVB-RT OUT MIXR SPK MIXR Switch" on
 aplay  xxx.wav
 ```
 
-- 外置麦克风
+- **外置麦克风录音**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -287,3 +272,7 @@ aplay  xxx.wav
 ## 参考
 
 [Audio Setup and Development — NVIDIA Jetson Linux Developer Guide](https://docs.nvidia.com/jetson/archives/r36.4.3/DeveloperGuide/SD/Communications/AudioSetupAndDevelopment.html#)
+
+---
+
+如需适配其它音频编解码器，流程基本一致，重点关注 codec 驱动支持及设备树参数配置。
