--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
@@ -1,26 +1,26 @@
 # 4G/5G
 
-本文档介绍了4G/5G使用的说明，以移远的EM05和RM520N-GL 5G。
-
-这两个模组在系统中已有驱动，所以不需要额外安装驱动。
+本节以移远 Quectel EM05（4G）和 RM520N-GL（5G）为例，介绍NG4520 平台下 4G/5G 模组的使用方法。两款模组在主流 Linux 系统中已自带驱动，无需额外安装。
 
 ## 串口工具
 
-可以使用minicom来执行AT指令
+用于 AT 指令交互，推荐 `minicom`：
 
 ```
 $ sudo apt-get install minicom
 ```
 
-## EM05
+## EM05（4G）模组使用
 
-驱动已经有的情况下，输入lsusb可以看到设备
+1. **驱动检测**
+
+插入模组后，使用 `lsusb` 查看设备识别情况：
 
 ```
 Bus 001 Device 004: ID 2c7c:030e Quectel Wireless Solutions Co., Ltd. Quectel EM05-G
 ```
 
-输入dmesg,可以看到有4个ttyUSB设备，其中ttyUSB2用来输入AT指令
+查看串口节点（`dmesg`），一般会出现 4 个 `/dev/ttyUSB*`，其中 `ttyUSB2` 用于 AT 指令：
 
 ```
 [   11.224317] usbserial: USB Serial support registered for GSM modem (1-port)
@@ -34,13 +34,15 @@ Bus 001 Device 004: ID 2c7c:030e Quectel Wireless Solutions Co., Ltd. Quectel EM
 [   11.227422] usb 1-2.3: GSM modem (1-port) converter now attached to ttyUSB3
 ```
 
-使用minicom打开
+2. **AT 指令交互**
+
+打开串口终端：
 
 ```
 $ sudo minicom -D /dev/ttyUSB2
 ```
 
-相关AT指令进行查看各种信息，常用指令如下
+常用 AT 指令：
 
 ```
 ati              查看模块型号及固件版本
@@ -50,7 +52,9 @@ at+cops          查看运营商
 at+creg?         获得手机的注册状态(0,1:表示注册正常)
 ```
 
-由于ubuntu网络管理会自动配置网络，所以使用图形化网络配置进行配置
+3. **网络配置与测试**
+
+Ubuntu 网络管理器会自动识别和配置网络，亦可通过图形界面配置。
 
 ![EM05_network_configuration.png](/img/EM05_network_configuration.png)
 
@@ -69,7 +73,7 @@ enx12849acd283b: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 ```
 
-使用ping命令测试网络连接
+测试网络连通性：
 
 ```
 $ ping -I enx12849acd283b www.baidu.com
@@ -79,15 +83,17 @@ PING www.baidu.com(2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:2
 64 bytes from 2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:210c): icmp_seq=3 ttl=48 time=43.9 ms
 ```
 
-## RM520N-GL
+## RM520N-GL（5G）模组使用
 
-驱动已经有的情况下，输入lsusb可以看到设备
+1. **驱动检测**
+
+插入模组后，使用 `lsusb` 查看设备识别情况：
 
 ```
 Bus 002 Device 003: ID 2c7c:0801 Quectel Wireless Solutions Co., Ltd. RM520N-GL
 ```
 
-输入dmesg,可以看到有4个ttyUSB设备，其中ttyUSB2用来输入AT指令
+查看串口节点（`dmesg`），一般会出现 4 个 `/dev/ttyUSB*`，其中 `ttyUSB2` 用于 AT 指令：
 
 ```
 [    9.209315] option 2-1.3:1.0: GSM modem (1-port) converter detected
@@ -100,13 +106,15 @@ Bus 002 Device 003: ID 2c7c:0801 Quectel Wireless Solutions Co., Ltd. RM520N-GL
 [    9.215450] usb 2-1.3: GSM modem (1-port) converter now attached to ttyUSB3
 ```
 
-使用minicom打开
+2. AT 指令交互
+
+打开串口终端：
 
 ```
 $ sudo minicom -D /dev/ttyUSB2
 ```
 
-相关AT指令进行查看各种信息，常用指令如下
+常用 AT 指令：
 
 ```
 ATI                         查看模组信息
@@ -156,29 +164,39 @@ OK
 OK
 ```
 
-对于linux系统来说，如果网卡配置模式不是ecm模式，则需要将其改为ecm模式，模式定义如下
+3. 网卡模式配置（推荐 ECM 模式）
+
+查询当前网卡模式：
 
 ```
-AT+QCFG="usbnet",0 驱动类型为 NDIS(QMI))；
-AT+QCFG="usbnet",1 驱动类型为 ECM；（Linux系统推荐用）
-AT+QCFG="usbnet",2 驱动类型为 MBIM；（Windows系统推荐用，Linux暂不支持）
-AT+QCFG="usbnet",5 驱动类型为 NCM；（暂不支持）
+AT+QCFG="usbnet"
 ```
 
-使用命令进行网络设置
+配置为 ECM 模式（Linux 推荐）：
 
 ```
 AT+QCFG="usbnet",1 
 AT+CFUN=1,1
 ```
 
-等待重启后，dmesg可以看到ecm设备被添加注册
+模式定义：
+
+| 指令                 | 描述        |
+| ------------------ | --------- |
+| AT+QCFG="usbnet",0 | NDIS(QMI) |
+| AT+QCFG="usbnet",1 | ECM（推荐）   |
+| AT+QCFG="usbnet",2 | MBIM      |
+| AT+QCFG="usbnet",5 | NCM       |
+
+4. 网络配置与测试
+
+模组重启后，`dmesg` 可见 ECM 设备注册：
 
 ```
 [    9.206605] cdc_ether 2-1.3:1.10 usb0: register 'cdc_ether' at usb-3610000.usb-1.3, CDC Ethernet Device, 7a:a8:fd:a4:36:d1
 ```
 
-使用ifconfig命令查看网络，已自动分配ip
+查看网络接口：
 
 ```
 enx7aa8fda436d1: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
@@ -193,7 +211,7 @@ enx7aa8fda436d1: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 ```
 
-使用ping命令测试网络连接
+测试网络连通性：
 
 ```
 $ ping -I enx7aa8fda436d1 www.baidu.com
@@ -203,4 +221,8 @@ PING www.baidu.com(2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:2
 64 bytes from 2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:210c): icmp_seq=3 ttl=47 time=107 ms
 ```
 
-正常连接，5G模组能正常使用
+---
+
+
+
+如需使用其它品牌或型号的 4G/5G 模组，建议参考对应厂商文档及官方驱动说明。
