fix: update NG4500

--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
@@ -37,7 +37,7 @@ NVIDIA 平台支持两种 Camera 驱动架构：
 
 - 确认连接接口及 tegra_sinterface 对应关系（如 NG452X 平台 cam0=serial_c）
 
-> **本例基于 Jetson Orin NX，硬件连接接口为 cam0。****
+> **本例基于 Jetson Orin NX，硬件连接接口为 cam0。**
 
 ### 设备树配置
 
@@ -68,7 +68,7 @@ NVIDIA 平台支持两种 Camera 驱动架构：
   ```
 
 - I2C 设备节点配置
-
+  
   配置摄像头参数（I2C 地址、模式、时钟、分辨率等）：
   
   ```nand2tetris-hdl
@@ -215,7 +215,7 @@ NVIDIA 平台支持两种 Camera 驱动架构：
 
 ### 驱动开发与编译
 
-- 添加驱动源码**
+- 添加驱动源码
   
   - 路径示例：`drivers/media/i2c/ov5647.c`
   - 推荐基于 `nv_ov5693.c` 修改。
@@ -238,11 +238,11 @@ NVIDIA 平台支持两种 Camera 驱动架构：
       .sensor_init = ov5647_sensor_init,
   };
   ```
-
+  
   这些函数的具体实现需要根据 OV5647 的数据手册和相关文档进行编写。
-
+  
   - 添加寄存器表头文件
-
+    
     - 路径示例：`drivers/media/i2c/ov5647_modes_tbls.h`
     - 包含各分辨率、曝光等寄存器配置表，需与设备树 mode 顺序保持一致。
     
@@ -294,31 +294,31 @@ depmod
 ## 调试与验证流程
 
 1. **设备树加载验证**
-
+   
    - 检查 `extlinux.conf` 是否加载了 `.dtbo`：
-
+     
      `cat /boot/extlinux/extlinux.conf`
-
+   
    - 检查设备树节点是否生效：
-
+     
      `cat /proc/device-tree/tegra-camera-platform/modules/module1/drivernode0/sysfs-device-tree`
 
 2. **驱动加载验证**
-
+   
    - 检查驱动模块：
-
+     
      `lsmod | grep ov5647 sudo dmesg | grep ov5647`
-
+   
    - 检查 I2C 设备匹配：
-
+     
      `sudo i2cdetect -y -r 9`
 
 3. **摄像头功能测试**
-
+   
    - 运行 `nvgstcapture-1.0`，检查分辨率与模式匹配、无报错。
-
+   
    - 检查视频流链路：
-
+     
      `sudo media-ctl -p -d /dev/media0`
 
 ## 参考
