fix: TAPD issues fixed

--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
@@ -164,7 +164,7 @@ OK
 OK
 ```
 
-3. 网卡模式配置（推荐 ECM 模式）
+3. 5G模组网络连接设置
 
 查询当前网卡模式：
 
@@ -172,7 +172,7 @@ OK
 AT+QCFG="usbnet"
 ```
 
-配置为 ECM 模式（Linux 推荐）：
+输入以下指令配置为 ECM 模式（Linux 推荐）：
 
 ```
 AT+QCFG="usbnet",1 
@@ -199,6 +199,7 @@ AT+CFUN=1,1
 查看网络接口：
 
 ```
+$ ifconfig
 enx7aa8fda436d1: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
         inet 192.168.225.94  netmask 255.255.255.0  broadcast 192.168.225.255
         inet6 2409:8934:20c2:fbe7:bc33:5fcd:fd07:f46b  prefixlen 64  scopeid 0x0<global>
@@ -222,7 +223,5 @@ PING www.baidu.com(2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:2
 ```
 
 ---
-
-
 
 如需使用其它品牌或型号的 4G/5G 模组，建议参考对应厂商文档及官方驱动说明。
