Fix TAPD problem

--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
@@ -114,6 +114,8 @@ Bus 002 Device 003: ID 2c7c:0801 Quectel Wireless Solutions Co., Ltd. RM520N-GL
 $ sudo minicom -D /dev/ttyUSB2
 ```
 
+进入minicom后，Crtl+A，再按E,打开/关闭回显，输入AT 收到 OK，表示一切正常可以用以下指令进行调试。
+
 常用 AT 指令：
 
 ```
@@ -163,6 +165,8 @@ OK
 
 OK
 ```
+
+验证完后，按下 Ctrl + A再按 X，选择yes退出。
 
 3. 5G模组网络连接设置
 
